--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+// sass --watch sass/style.scss:css/style.css
 @mixin htmlbody {
     height: 100%;
     margin: 0;
@@ -26,8 +27,13 @@
     color: #ddd;
     background-color: #282E34;
     text-align: center;
-    padding: 50px 80px;
+    padding: 20px 80px;
     text-align: justify;
+}
+
+@mixin chiffres {
+    font-size: 1.5em;
+    color: rgb(218, 218, 10);
 }
 
 html {
@@ -94,6 +100,11 @@ html {
         h3 {
             @include h3;
         }
+        p {
+            .chiffres {
+                @include chiffres;
+            }
+        }
     }
     .bgimg-soleil {
         @include bg-img;
@@ -116,6 +127,11 @@ html {
         h3 {
             @include h3;
         }
+        p {
+            .chiffres {
+                @include chiffres;
+            }
+        }
     }
     .bgimg-venus {
         @include bg-img;
@@ -126,6 +142,11 @@ html {
         @include expl;
         h3 {
             @include h3;
+        }
+        p {
+            .chiffres {
+                @include chiffres;
+            }
         }
     }
     .bgimg-terre {
@@ -138,6 +159,11 @@ html {
         h3 {
             @include h3;
         }
+        p {
+            .chiffres {
+                @include chiffres;
+            }
+        }
     }
     .bgimg-mars {
         @include bg-img;
@@ -148,6 +174,11 @@ html {
         @include expl;
         h3 {
             @include h3;
+        }
+        p {
+            .chiffres {
+                @include chiffres;
+            }
         }
     }
     .bgimg-jupiter {
@@ -160,6 +191,11 @@ html {
         h3 {
             @include h3;
         }
+        p {
+            .chiffres {
+                @include chiffres;
+            }
+        }
     }
     .bgimg-saturne {
         @include bg-img;
@@ -171,6 +207,11 @@ html {
         h3 {
             @include h3;
         }
+        p {
+            .chiffres {
+                @include chiffres;
+            }
+        }
     }
     .bgimg-uranus {
         @include bg-img;
@@ -181,6 +222,11 @@ html {
         @include expl;
         h3 {
             @include h3;
+        }
+        p {
+            .chiffres {
+                @include chiffres;
+            }
         }
     }
     .bgimg-neptune {
