--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,14 @@ html {
   height: 100%;
   margin: 0;
   font: 400 15px/1.8 "Lato", sans-serif;
-  color: #777; }
+  color: #777;
+  scroll-behavior: smooth; }
   html body {
     height: 100%;
     margin: 0;
     font: 400 15px/1.8 "Lato", sans-serif;
-    color: #777; }
+    color: #777;
+    scroll-behavior: smooth; }
   html nav {
     position: fixed;
     height: 5%;
