--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,27 @@ html {
         margin-left: 2em; }
         html nav ul li a {
           color: white;
-          text-decoration: none; }
+          text-decoration: none;
+          position: relative; }
+          html nav ul li a:hover {
+            color: yellow; }
+          html nav ul li a:before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            bottom: -20%;
+            left: 0;
+            background-color: yellow;
+            visibility: hidden;
+            -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+            -webkit-transition: all 0.25s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+            transition: all 0.25s cubic-bezier(1, 0.25, 0, 0.75) 0s; }
+          html nav ul li a:hover:before {
+            visibility: visible;
+            -webkit-transform: scaleX(1);
+            transform: scaleX(1); }
   html .bgimg-systeme_solaire {
     position: relative;
     opacity: 0.65;
