--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 // sass --watch sass/style.scss:css/style.css
+$thetransition: all .25s cubic-bezier(1, .25, 0, .75) 0s;
 @mixin htmlbody {
     height: 100%;
     margin: 0;
@@ -58,6 +59,29 @@ html {
                 a {
                     color: white;
                     text-decoration: none;
+                    position: relative;
+                    &:hover {
+                        color: yellow;
+                    }
+                    &:before {
+                        content: "";
+                        position: absolute;
+                        width: 100%;
+                        height: 1px;
+                        bottom: -20%;
+                        left: 0;
+                        background-color: yellow;
+                        visibility: hidden;
+                        -webkit-transform: scaleX(0);
+                        transform: scaleX(0);
+                        -webkit-transition: $thetransition;
+                        transition: $thetransition;
+                    }
+                    &:hover:before {
+                        visibility: visible;
+                        -webkit-transform: scaleX(1);
+                        transform: scaleX(1);
+                    }
                 }
             }
         }
