--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,35 @@ html {
       text-transform: uppercase;
       font: 20px "Lato", sans-serif;
       color: #ddd; }
+      html .div-expl h3 .btn {
+        cursor: pointer;
+        position: relative;
+        padding: 10px 20px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        transition: all 1s; }
+        html .div-expl h3 .btn:after, html .div-expl h3 .btn:before {
+          content: " ";
+          width: 10px;
+          height: 10px;
+          position: absolute;
+          transition: all 1s; }
+        html .div-expl h3 .btn:after {
+          top: -1px;
+          left: -1px;
+          border-top: 5px solid white;
+          border-left: 5px solid white; }
+        html .div-expl h3 .btn:before {
+          bottom: -1px;
+          right: -1px;
+          border-bottom: 5px solid white;
+          border-right: 5px solid white; }
+        html .div-expl h3 .btn:hover {
+          border-top-right-radius: 0px;
+          border-bottom-left-radius: 0px; }
+          html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
+            width: 100%;
+            height: 100%; }
     html .div-expl p .chiffres {
       font-size: 1.5em;
       color: #dada0a; }
@@ -116,6 +145,35 @@ html {
       text-transform: uppercase;
       font: 20px "Lato", sans-serif;
       color: #ddd; }
+      html .div-expl h3 .btn {
+        cursor: pointer;
+        position: relative;
+        padding: 10px 20px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        transition: all 1s; }
+        html .div-expl h3 .btn:after, html .div-expl h3 .btn:before {
+          content: " ";
+          width: 10px;
+          height: 10px;
+          position: absolute;
+          transition: all 1s; }
+        html .div-expl h3 .btn:after {
+          top: -1px;
+          left: -1px;
+          border-top: 5px solid white;
+          border-left: 5px solid white; }
+        html .div-expl h3 .btn:before {
+          bottom: -1px;
+          right: -1px;
+          border-bottom: 5px solid white;
+          border-right: 5px solid white; }
+        html .div-expl h3 .btn:hover {
+          border-top-right-radius: 0px;
+          border-bottom-left-radius: 0px; }
+          html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
+            width: 100%;
+            height: 100%; }
   html .bgimg-mercure {
     position: relative;
     opacity: 0.65;
@@ -137,6 +195,35 @@ html {
       text-transform: uppercase;
       font: 20px "Lato", sans-serif;
       color: #ddd; }
+      html .div-expl h3 .btn {
+        cursor: pointer;
+        position: relative;
+        padding: 10px 20px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        transition: all 1s; }
+        html .div-expl h3 .btn:after, html .div-expl h3 .btn:before {
+          content: " ";
+          width: 10px;
+          height: 10px;
+          position: absolute;
+          transition: all 1s; }
+        html .div-expl h3 .btn:after {
+          top: -1px;
+          left: -1px;
+          border-top: 5px solid white;
+          border-left: 5px solid white; }
+        html .div-expl h3 .btn:before {
+          bottom: -1px;
+          right: -1px;
+          border-bottom: 5px solid white;
+          border-right: 5px solid white; }
+        html .div-expl h3 .btn:hover {
+          border-top-right-radius: 0px;
+          border-bottom-left-radius: 0px; }
+          html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
+            width: 100%;
+            height: 100%; }
     html .div-expl p .chiffres {
       font-size: 1.5em;
       color: #dada0a; }
@@ -161,6 +248,35 @@ html {
       text-transform: uppercase;
       font: 20px "Lato", sans-serif;
       color: #ddd; }
+      html .div-expl h3 .btn {
+        cursor: pointer;
+        position: relative;
+        padding: 10px 20px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        transition: all 1s; }
+        html .div-expl h3 .btn:after, html .div-expl h3 .btn:before {
+          content: " ";
+          width: 10px;
+          height: 10px;
+          position: absolute;
+          transition: all 1s; }
+        html .div-expl h3 .btn:after {
+          top: -1px;
+          left: -1px;
+          border-top: 5px solid white;
+          border-left: 5px solid white; }
+        html .div-expl h3 .btn:before {
+          bottom: -1px;
+          right: -1px;
+          border-bottom: 5px solid white;
+          border-right: 5px solid white; }
+        html .div-expl h3 .btn:hover {
+          border-top-right-radius: 0px;
+          border-bottom-left-radius: 0px; }
+          html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
+            width: 100%;
+            height: 100%; }
     html .div-expl p .chiffres {
       font-size: 1.5em;
       color: #dada0a; }
@@ -185,6 +301,35 @@ html {
       text-transform: uppercase;
       font: 20px "Lato", sans-serif;
       color: #ddd; }
+      html .div-expl h3 .btn {
+        cursor: pointer;
+        position: relative;
+        padding: 10px 20px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        transition: all 1s; }
+        html .div-expl h3 .btn:after, html .div-expl h3 .btn:before {
+          content: " ";
+          width: 10px;
+          height: 10px;
+          position: absolute;
+          transition: all 1s; }
+        html .div-expl h3 .btn:after {
+          top: -1px;
+          left: -1px;
+          border-top: 5px solid white;
+          border-left: 5px solid white; }
+        html .div-expl h3 .btn:before {
+          bottom: -1px;
+          right: -1px;
+          border-bottom: 5px solid white;
+          border-right: 5px solid white; }
+        html .div-expl h3 .btn:hover {
+          border-top-right-radius: 0px;
+          border-bottom-left-radius: 0px; }
+          html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
+            width: 100%;
+            height: 100%; }
     html .div-expl p .chiffres {
       font-size: 1.5em;
       color: #dada0a; }
@@ -209,6 +354,35 @@ html {
       text-transform: uppercase;
       font: 20px "Lato", sans-serif;
       color: #ddd; }
+      html .div-expl h3 .btn {
+        cursor: pointer;
+        position: relative;
+        padding: 10px 20px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        transition: all 1s; }
+        html .div-expl h3 .btn:after, html .div-expl h3 .btn:before {
+          content: " ";
+          width: 10px;
+          height: 10px;
+          position: absolute;
+          transition: all 1s; }
+        html .div-expl h3 .btn:after {
+          top: -1px;
+          left: -1px;
+          border-top: 5px solid white;
+          border-left: 5px solid white; }
+        html .div-expl h3 .btn:before {
+          bottom: -1px;
+          right: -1px;
+          border-bottom: 5px solid white;
+          border-right: 5px solid white; }
+        html .div-expl h3 .btn:hover {
+          border-top-right-radius: 0px;
+          border-bottom-left-radius: 0px; }
+          html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
+            width: 100%;
+            height: 100%; }
     html .div-expl p .chiffres {
       font-size: 1.5em;
       color: #dada0a; }
@@ -233,6 +407,35 @@ html {
       text-transform: uppercase;
       font: 20px "Lato", sans-serif;
       color: #ddd; }
+      html .div-expl h3 .btn {
+        cursor: pointer;
+        position: relative;
+        padding: 10px 20px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        transition: all 1s; }
+        html .div-expl h3 .btn:after, html .div-expl h3 .btn:before {
+          content: " ";
+          width: 10px;
+          height: 10px;
+          position: absolute;
+          transition: all 1s; }
+        html .div-expl h3 .btn:after {
+          top: -1px;
+          left: -1px;
+          border-top: 5px solid white;
+          border-left: 5px solid white; }
+        html .div-expl h3 .btn:before {
+          bottom: -1px;
+          right: -1px;
+          border-bottom: 5px solid white;
+          border-right: 5px solid white; }
+        html .div-expl h3 .btn:hover {
+          border-top-right-radius: 0px;
+          border-bottom-left-radius: 0px; }
+          html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
+            width: 100%;
+            height: 100%; }
     html .div-expl p .chiffres {
       font-size: 1.5em;
       color: #dada0a; }
@@ -257,6 +460,35 @@ html {
       text-transform: uppercase;
       font: 20px "Lato", sans-serif;
       color: #ddd; }
+      html .div-expl h3 .btn {
+        cursor: pointer;
+        position: relative;
+        padding: 10px 20px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        transition: all 1s; }
+        html .div-expl h3 .btn:after, html .div-expl h3 .btn:before {
+          content: " ";
+          width: 10px;
+          height: 10px;
+          position: absolute;
+          transition: all 1s; }
+        html .div-expl h3 .btn:after {
+          top: -1px;
+          left: -1px;
+          border-top: 5px solid white;
+          border-left: 5px solid white; }
+        html .div-expl h3 .btn:before {
+          bottom: -1px;
+          right: -1px;
+          border-bottom: 5px solid white;
+          border-right: 5px solid white; }
+        html .div-expl h3 .btn:hover {
+          border-top-right-radius: 0px;
+          border-bottom-left-radius: 0px; }
+          html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
+            width: 100%;
+            height: 100%; }
     html .div-expl p .chiffres {
       font-size: 1.5em;
       color: #dada0a; }
@@ -281,6 +513,35 @@ html {
       text-transform: uppercase;
       font: 20px "Lato", sans-serif;
       color: #ddd; }
+      html .div-expl h3 .btn {
+        cursor: pointer;
+        position: relative;
+        padding: 10px 20px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        transition: all 1s; }
+        html .div-expl h3 .btn:after, html .div-expl h3 .btn:before {
+          content: " ";
+          width: 10px;
+          height: 10px;
+          position: absolute;
+          transition: all 1s; }
+        html .div-expl h3 .btn:after {
+          top: -1px;
+          left: -1px;
+          border-top: 5px solid white;
+          border-left: 5px solid white; }
+        html .div-expl h3 .btn:before {
+          bottom: -1px;
+          right: -1px;
+          border-bottom: 5px solid white;
+          border-right: 5px solid white; }
+        html .div-expl h3 .btn:hover {
+          border-top-right-radius: 0px;
+          border-bottom-left-radius: 0px; }
+          html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
+            width: 100%;
+            height: 100%; }
     html .div-expl p .chiffres {
       font-size: 1.5em;
       color: #dada0a; }
