--- a/css/style.css
+++ b/css/style.css
@@ -121,9 +121,28 @@ html {
           html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
             width: 100%;
             height: 100%; }
-    html .div-expl p .chiffres {
-      font-size: 1.5em;
-      color: #dada0a; }
+    html .div-expl .div1 {
+      display: flex;
+      flex-direction: row;
+      width: 100vw; }
+      html .div-expl .div1 .div2 {
+        width: 50vw; }
+        html .div-expl .div1 .div2 p .chiffres {
+          font-size: 1.5em;
+          color: #dada0a; }
+      html .div-expl .div1 .div3 {
+        display: flex; }
+        html .div-expl .div1 .div3 .div4 {
+          margin: auto; }
+          html .div-expl .div1 .div3 .div4 img {
+            width: 300px;
+            transition: scale(1);
+            position: relative;
+            z-index: 10;
+            transition: transform 1S; }
+            html .div-expl .div1 .div3 .div4 img:hover {
+              transform: scale(1.5);
+              z-index: 15; }
   html .bgimg-soleil {
     position: relative;
     opacity: 0.65;
@@ -174,6 +193,28 @@ html {
           html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
             width: 100%;
             height: 100%; }
+    html .div-expl .div1 {
+      display: flex;
+      flex-direction: row;
+      width: 100vw; }
+      html .div-expl .div1 .div2 {
+        width: 50vw; }
+        html .div-expl .div1 .div2 p .chiffres {
+          font-size: 1.5em;
+          color: #dada0a; }
+      html .div-expl .div1 .div3 {
+        display: flex; }
+        html .div-expl .div1 .div3 .div4 {
+          margin: auto; }
+          html .div-expl .div1 .div3 .div4 img {
+            width: 300px;
+            transition: scale(1);
+            position: relative;
+            z-index: 10;
+            transition: transform 1S; }
+            html .div-expl .div1 .div3 .div4 img:hover {
+              transform: scale(1.5);
+              z-index: 15; }
   html .bgimg-mercure {
     position: relative;
     opacity: 0.65;
@@ -224,9 +265,28 @@ html {
           html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
             width: 100%;
             height: 100%; }
-    html .div-expl p .chiffres {
-      font-size: 1.5em;
-      color: #dada0a; }
+    html .div-expl .div1 {
+      display: flex;
+      flex-direction: row;
+      width: 100vw; }
+      html .div-expl .div1 .div2 {
+        width: 50vw; }
+        html .div-expl .div1 .div2 p .chiffres {
+          font-size: 1.5em;
+          color: #dada0a; }
+      html .div-expl .div1 .div3 {
+        display: flex; }
+        html .div-expl .div1 .div3 .div4 {
+          margin: auto; }
+          html .div-expl .div1 .div3 .div4 img {
+            width: 300px;
+            transition: scale(1);
+            position: relative;
+            z-index: 10;
+            transition: transform 1S; }
+            html .div-expl .div1 .div3 .div4 img:hover {
+              transform: scale(1.5);
+              z-index: 15; }
   html .bgimg-venus {
     position: relative;
     opacity: 0.65;
@@ -277,9 +337,28 @@ html {
           html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
             width: 100%;
             height: 100%; }
-    html .div-expl p .chiffres {
-      font-size: 1.5em;
-      color: #dada0a; }
+    html .div-expl .div1 {
+      display: flex;
+      flex-direction: row;
+      width: 100vw; }
+      html .div-expl .div1 .div2 {
+        width: 50vw; }
+        html .div-expl .div1 .div2 p .chiffres {
+          font-size: 1.5em;
+          color: #dada0a; }
+      html .div-expl .div1 .div3 {
+        display: flex; }
+        html .div-expl .div1 .div3 .div4 {
+          margin: auto; }
+          html .div-expl .div1 .div3 .div4 img {
+            width: 300px;
+            transition: scale(1);
+            position: relative;
+            z-index: 10;
+            transition: transform 1S; }
+            html .div-expl .div1 .div3 .div4 img:hover {
+              transform: scale(1.5);
+              z-index: 15; }
   html .bgimg-terre {
     position: relative;
     opacity: 0.65;
@@ -330,9 +409,28 @@ html {
           html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
             width: 100%;
             height: 100%; }
-    html .div-expl p .chiffres {
-      font-size: 1.5em;
-      color: #dada0a; }
+    html .div-expl .div1 {
+      display: flex;
+      flex-direction: row;
+      width: 100vw; }
+      html .div-expl .div1 .div2 {
+        width: 50vw; }
+        html .div-expl .div1 .div2 p .chiffres {
+          font-size: 1.5em;
+          color: #dada0a; }
+      html .div-expl .div1 .div3 {
+        display: flex; }
+        html .div-expl .div1 .div3 .div4 {
+          margin: auto; }
+          html .div-expl .div1 .div3 .div4 img {
+            width: 300px;
+            transition: scale(1);
+            position: relative;
+            z-index: 10;
+            transition: transform 1S; }
+            html .div-expl .div1 .div3 .div4 img:hover {
+              transform: scale(1.5);
+              z-index: 15; }
   html .bgimg-mars {
     position: relative;
     opacity: 0.65;
@@ -383,9 +481,28 @@ html {
           html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
             width: 100%;
             height: 100%; }
-    html .div-expl p .chiffres {
-      font-size: 1.5em;
-      color: #dada0a; }
+    html .div-expl .div1 {
+      display: flex;
+      flex-direction: row;
+      width: 100vw; }
+      html .div-expl .div1 .div2 {
+        width: 50vw; }
+        html .div-expl .div1 .div2 p .chiffres {
+          font-size: 1.5em;
+          color: #dada0a; }
+      html .div-expl .div1 .div3 {
+        display: flex; }
+        html .div-expl .div1 .div3 .div4 {
+          margin: auto; }
+          html .div-expl .div1 .div3 .div4 img {
+            width: 300px;
+            transition: scale(1);
+            position: relative;
+            z-index: 10;
+            transition: transform 1S; }
+            html .div-expl .div1 .div3 .div4 img:hover {
+              transform: scale(1.5);
+              z-index: 15; }
   html .bgimg-jupiter {
     position: relative;
     opacity: 0.65;
@@ -436,9 +553,28 @@ html {
           html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
             width: 100%;
             height: 100%; }
-    html .div-expl p .chiffres {
-      font-size: 1.5em;
-      color: #dada0a; }
+    html .div-expl .div1 {
+      display: flex;
+      flex-direction: row;
+      width: 100vw; }
+      html .div-expl .div1 .div2 {
+        width: 50vw; }
+        html .div-expl .div1 .div2 p .chiffres {
+          font-size: 1.5em;
+          color: #dada0a; }
+      html .div-expl .div1 .div3 {
+        display: flex; }
+        html .div-expl .div1 .div3 .div4 {
+          margin: auto; }
+          html .div-expl .div1 .div3 .div4 img {
+            width: 300px;
+            transition: scale(1);
+            position: relative;
+            z-index: 10;
+            transition: transform 1S; }
+            html .div-expl .div1 .div3 .div4 img:hover {
+              transform: scale(1.5);
+              z-index: 15; }
   html .bgimg-saturne {
     position: relative;
     opacity: 0.65;
@@ -489,9 +625,28 @@ html {
           html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
             width: 100%;
             height: 100%; }
-    html .div-expl p .chiffres {
-      font-size: 1.5em;
-      color: #dada0a; }
+    html .div-expl .div1 {
+      display: flex;
+      flex-direction: row;
+      width: 100vw; }
+      html .div-expl .div1 .div2 {
+        width: 50vw; }
+        html .div-expl .div1 .div2 p .chiffres {
+          font-size: 1.5em;
+          color: #dada0a; }
+      html .div-expl .div1 .div3 {
+        display: flex; }
+        html .div-expl .div1 .div3 .div4 {
+          margin: auto; }
+          html .div-expl .div1 .div3 .div4 img {
+            width: 300px;
+            transition: scale(1);
+            position: relative;
+            z-index: 10;
+            transition: transform 1S; }
+            html .div-expl .div1 .div3 .div4 img:hover {
+              transform: scale(1.5);
+              z-index: 15; }
   html .bgimg-uranus {
     position: relative;
     opacity: 0.65;
@@ -542,9 +697,28 @@ html {
           html .div-expl h3 .btn:hover:before, html .div-expl h3 .btn:hover:after {
             width: 100%;
             height: 100%; }
-    html .div-expl p .chiffres {
-      font-size: 1.5em;
-      color: #dada0a; }
+    html .div-expl .div1 {
+      display: flex;
+      flex-direction: row;
+      width: 100vw; }
+      html .div-expl .div1 .div2 {
+        width: 50vw; }
+        html .div-expl .div1 .div2 p .chiffres {
+          font-size: 1.5em;
+          color: #dada0a; }
+      html .div-expl .div1 .div3 {
+        display: flex; }
+        html .div-expl .div1 .div3 .div4 {
+          margin: auto; }
+          html .div-expl .div1 .div3 .div4 img {
+            width: 300px;
+            transition: scale(1);
+            position: relative;
+            z-index: 10;
+            transition: transform 1S; }
+            html .div-expl .div1 .div3 .div4 img:hover {
+              transform: scale(1.5);
+              z-index: 15; }
   html .bgimg-neptune {
     position: relative;
     opacity: 0.65;
